<resources>
    <string name="app_name">CS 496 Final Project - Gluckman</string>
    <string name="app_welcome">Choose an activity below ↓</string>
    <string name="view_dogs_text">View Dogs</string>
    <string name="add_dog_text">Add Dog</string>
    <string name="modify_dog_text">Update Dog</string>
    <string name="delete_dog_text">Remove Dog</string>
    <string name="adopt_dog_text">Adopt a Dog!</string>
    <string name="view_foster_homes_text">View Foster Homes</string>
    <string name="add_foster_home_text">Add Foster Home</string>
    <string name="modify_foster_home_text">Update Foster Home</string>
    <string name="delete_foster_home_text">Remove Foster Home</string>
    <string name="foster_dog_text">Place Foster Dog</string>
    <string name="unfoster_dog_text">Remove Foster Dog</string>
    <string name="dog_name_text">Name: </string>
    <string name="dog_name_text2">Dog: </string>
    <string name="dog_breed_text">Breed: </string>
    <string name="dog_birthdate_text">Birthdate: </string>
    <string name="dog_adopted_text">Adopted: </string>
    <string name="dog_fostered_text">Fostered: </string>
    <string name="dog_foster_home_text">Foster Home: </string>
    <string name="home_name_text">Name: </string>
    <string name="home_address_text">Address: </string>
    <string name="home_phone_text">Phone: </string>
    <string name="home_children_text">Has children: </string>
    <string name="home_pets_text">Has other pets: </string>
    <string name="submit_dog_text">Add new dog</string>
    <string name="submit_home_text">Add new home</string>
    <string name="delete_dog_head">Choose the dog to remove:</string>
    <string name="modify_dog_head">Choose the dog to update:</string>
    <string name="modify_dog_head2">Enter updates where applicable (others will remain unchanged):</string>
    <string name="adopt_dog_head">Choose the dog to adopt:</string>
    <string name="delete_home_head">Choose the home to remove:</string>
    <string name="modify_home_head">Choose the home to update:</string>
    <string name="modify_home_head2">Enter updates where applicable (others will remain unchanged):</string>
    <string name="place_foster_head">Choose the dog to place:</string>
    <string name="place_foster_head2">Choose the foster home:</string>
    <string name="remove_foster_head">Choose the dog to remove:</string>
</resources>
