<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.davidgluckman.cs496finaldg.AddDogActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/dog_name_text"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/newDogName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="required"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:text="@string/dog_breed_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/newDogBreed"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:text="@string/dog_birthdate_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/newDogBirthdate"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/submit_dog_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_dog_text"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
