<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.davidgluckman.cs496finaldg.AddFosterHomeActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/home_name_text"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/newHomeName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="required"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:text="@string/home_address_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/newHomeAddress"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="required"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:text="@string/home_phone_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/newHomePhone"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="required"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:text="@string/home_children_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:id="@+id/childrenButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes"/>

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:text="@string/home_pets_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:id="@+id/petsButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes"/>

            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/submit_home_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_home_text"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
